# glua

./: .clang-format  .gitignore  .pre-commit-config.yaml  .ruff.toml  CMakeLists.txt  README.md
cmake/: Findlua.cmake  Findstb.cmake  Glua.cmake
cmake/lua/: CMakeLists.txt
example/: CMakeLists.txt  more.yaml  some.yaml
include/glua/: glua.h
src/glua/: CMakeLists.txt  glua.c  implementation.c
tests/: CMakeLists.txt  gluatypes.h  gluatypes.yaml  gluatypes_stb.yaml  test_glua.c  test_glua_stb.c
tools/: glua-generate.sh
tools/glua/: __main__.py  glua.mako  types.py
